// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 79,
      "range_check_builtin": 1879,
    },
    "n_memory_holes": 7841,
    "n_steps": 25830,
  },
  "result": {
    "delta": {
      "amount0": {
        "mag": 10000n,
        "sign": true,
      },
      "amount1": {
        "mag": 10030n,
        "sign": false,
      },
    },
    "liquidity_after": 1000000000000000000n,
    "locker": 2662993589346755370092721343444987702590484885920431010914808791251442237813n,
    "params": {
      "amount": {
        "mag": 10000n,
        "sign": true,
      },
      "is_token1": false,
      "skip_ahead": 0n,
      "sqrt_ratio_limit": 6277100250585753475930931601400621808602321654880405518632n,
    },
    "pool_key": {
      "extension": 0n,
      "fee": 1020847100762815390390123822295304634n,
      "tick_spacing": 5982n,
      "token0": 1228628895189351253468051375475939582787939364031167926961398089289923517275n,
      "token1": 1760364284160430237744965698552874577498582678467195305984866021327085678255n,
    },
    "sqrt_ratio_after": 340282366920941876495514824478789461470n,
    "tick_after": {
      "mag": 0n,
      "sign": false,
    },
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 81,
      "pedersen_builtin": 85,
      "range_check_builtin": 1916,
    },
    "n_memory_holes": 17862,
    "n_steps": 27895,
  },
  "result": {
    "delta": {
      "amount0": {
        "mag": 10030n,
        "sign": false,
      },
      "amount1": {
        "mag": 10000n,
        "sign": true,
      },
    },
    "liquidity_after": 1000000000000000000n,
    "locker": 2662993589346755370092721343444987702590484885920431010914808791251442237813n,
    "params": {
      "amount": {
        "mag": 10000n,
        "sign": true,
      },
      "is_token1": true,
      "skip_ahead": 0n,
      "sqrt_ratio_limit": 18446748437148339061n,
    },
    "pool_key": {
      "extension": 0n,
      "fee": 1020847100762815390390123822295304634n,
      "tick_spacing": 5982n,
      "token0": 1228628895189351253468051375475939582787939364031167926961398089289923517275n,
      "token1": 1760364284160430237744965698552874577498582678467195305984866021327085678255n,
    },
    "sqrt_ratio_after": 340282366920935050431234390418979673808n,
    "tick_after": {
      "mag": 1n,
      "sign": true,
    },
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 81,
      "pedersen_builtin": 85,
      "range_check_builtin": 1854,
    },
    "n_memory_holes": 18159,
    "n_steps": 27534,
  },
  "result": {
    "delta": {
      "amount0": {
        "mag": 10000n,
        "sign": false,
      },
      "amount1": {
        "mag": 9969n,
        "sign": true,
      },
    },
    "liquidity_after": 1000000000000000000n,
    "locker": 2662993589346755370092721343444987702590484885920431010914808791251442237813n,
    "params": {
      "amount": {
        "mag": 10000n,
        "sign": false,
      },
      "is_token1": false,
      "skip_ahead": 0n,
      "sqrt_ratio_limit": 18446748437148339061n,
    },
    "pool_key": {
      "extension": 0n,
      "fee": 1020847100762815390390123822295304634n,
      "tick_spacing": 5982n,
      "token0": 1228628895189351253468051375475939582787939364031167926961398089289923517275n,
      "token1": 1760364284160430237744965698552874577498582678467195305984866021327085678255n,
    },
    "sqrt_ratio_after": 340282366920935070848176405709111855138n,
    "tick_after": {
      "mag": 1n,
      "sign": true,
    },
  },
}
`;

exports[`core tests 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 27,
      "pedersen_builtin": 79,
      "range_check_builtin": 1830,
    },
    "n_memory_holes": 8043,
    "n_steps": 25559,
  },
  "result": {
    "delta": {
      "amount0": {
        "mag": 9969n,
        "sign": true,
      },
      "amount1": {
        "mag": 10000n,
        "sign": false,
      },
    },
    "liquidity_after": 1000000000000000000n,
    "locker": 2662993589346755370092721343444987702590484885920431010914808791251442237813n,
    "params": {
      "amount": {
        "mag": 10000n,
        "sign": false,
      },
      "is_token1": true,
      "skip_ahead": 0n,
      "sqrt_ratio_limit": 6277100250585753475930931601400621808602321654880405518632n,
    },
    "pool_key": {
      "extension": 0n,
      "fee": 1020847100762815390390123822295304634n,
      "tick_spacing": 5982n,
      "token0": 1228628895189351253468051375475939582787939364031167926961398089289923517275n,
      "token1": 1760364284160430237744965698552874577498582678467195305984866021327085678255n,
    },
    "sqrt_ratio_after": 340282366920941856078572809188248941300n,
    "tick_after": {
      "mag": 0n,
      "sign": false,
    },
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1620,
      "pedersen_builtin": 402,
      "range_check_builtin": 27633,
    },
    "n_memory_holes": 318074,
    "n_steps": 220022,
  },
  "result": {
    "delta": {
      "amount0": {
        "mag": 0n,
        "sign": false,
      },
      "amount1": {
        "mag": 0n,
        "sign": false,
      },
    },
    "liquidity_after": 0n,
    "locker": 2662993589346755370092721343444987702590484885920431010914808791251442237813n,
    "params": {
      "amount": {
        "mag": 10000n,
        "sign": true,
      },
      "is_token1": false,
      "skip_ahead": 0n,
      "sqrt_ratio_limit": 6277100250585753475930931601400621808602321654880405518632n,
    },
    "pool_key": {
      "extension": 0n,
      "fee": 1020847100762815390390123822295304634n,
      "tick_spacing": 5982n,
      "token0": 1228628895189351253468051375475939582787939364031167926961398089289923517275n,
      "token1": 1760364284160430237744965698552874577498582678467195305984866021327085678255n,
    },
    "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
    "tick_after": {
      "mag": 88722883n,
      "sign": false,
    },
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 408,
      "range_check_builtin": 27038,
    },
    "n_memory_holes": 327433,
    "n_steps": 223179,
  },
  "result": {
    "delta": {
      "amount0": {
        "mag": 0n,
        "sign": false,
      },
      "amount1": {
        "mag": 0n,
        "sign": false,
      },
    },
    "liquidity_after": 0n,
    "locker": 2662993589346755370092721343444987702590484885920431010914808791251442237813n,
    "params": {
      "amount": {
        "mag": 10000n,
        "sign": true,
      },
      "is_token1": true,
      "skip_ahead": 0n,
      "sqrt_ratio_limit": 18446748437148339061n,
    },
    "pool_key": {
      "extension": 0n,
      "fee": 1020847100762815390390123822295304634n,
      "tick_spacing": 5982n,
      "token0": 1228628895189351253468051375475939582787939364031167926961398089289923517275n,
      "token1": 1760364284160430237744965698552874577498582678467195305984866021327085678255n,
    },
    "sqrt_ratio_after": 18446748437148339061n,
    "tick_after": {
      "mag": 88722884n,
      "sign": true,
    },
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1647,
      "pedersen_builtin": 408,
      "range_check_builtin": 26978,
    },
    "n_memory_holes": 327733,
    "n_steps": 222707,
  },
  "result": {
    "delta": {
      "amount0": {
        "mag": 0n,
        "sign": false,
      },
      "amount1": {
        "mag": 0n,
        "sign": true,
      },
    },
    "liquidity_after": 0n,
    "locker": 2662993589346755370092721343444987702590484885920431010914808791251442237813n,
    "params": {
      "amount": {
        "mag": 10000n,
        "sign": false,
      },
      "is_token1": false,
      "skip_ahead": 0n,
      "sqrt_ratio_limit": 18446748437148339061n,
    },
    "pool_key": {
      "extension": 0n,
      "fee": 1020847100762815390390123822295304634n,
      "tick_spacing": 5982n,
      "token0": 1228628895189351253468051375475939582787939364031167926961398089289923517275n,
      "token1": 1760364284160430237744965698552874577498582678467195305984866021327085678255n,
    },
    "sqrt_ratio_after": 18446748437148339061n,
    "tick_after": {
      "mag": 88722884n,
      "sign": true,
    },
  },
}
`;

exports[`core tests no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "execution_resources": {
    "builtin_instance_counter": {
      "bitwise_builtin": 1620,
      "pedersen_builtin": 402,
      "range_check_builtin": 27574,
    },
    "n_memory_holes": 318361,
    "n_steps": 219550,
  },
  "result": {
    "delta": {
      "amount0": {
        "mag": 0n,
        "sign": true,
      },
      "amount1": {
        "mag": 0n,
        "sign": false,
      },
    },
    "liquidity_after": 0n,
    "locker": 2662993589346755370092721343444987702590484885920431010914808791251442237813n,
    "params": {
      "amount": {
        "mag": 10000n,
        "sign": false,
      },
      "is_token1": true,
      "skip_ahead": 0n,
      "sqrt_ratio_limit": 6277100250585753475930931601400621808602321654880405518632n,
    },
    "pool_key": {
      "extension": 0n,
      "fee": 1020847100762815390390123822295304634n,
      "tick_spacing": 5982n,
      "token0": 1228628895189351253468051375475939582787939364031167926961398089289923517275n,
      "token1": 1760364284160430237744965698552874577498582678467195305984866021327085678255n,
    },
    "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
    "tick_after": {
      "mag": 88722883n,
      "sign": false,
    },
  },
}
`;
